[package]
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"
name    = "mona"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0"
clap       = "2.33"
colored    = "2.0"
env_logger = "0.7"
log        = "0.4"
winapi     = { version = "0.3.9", features = [
    "basetsd",
    "combaseapi",
    "impl-default",
    "lowlevelmonitorconfigurationapi",
    "objbase",
    "oleauto",
    "physicalmonitorenumerationapi",
    "taskschd",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
] }
